--- a/main.html
+++ b/main.html
@@ -8,6 +8,22 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+
+	
+  <nav>
+    <ul>
+        <li><a href="https://www.google.com">Home</a></li>
+        <li><a href="https://www.google.com">About us</a></li>
+        <li><a href="https://www.google.com">Contact us</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <h1>3 random images</h1>
+    <img src="https://picsum.photos/id/123/200/300" alt="Random image">
+    <img src="https://picsum.photos/id/124/200/300" alt="Random image">
+    <img src="https://picsum.photos/id/125/200/300" alt="Random image">
+  </main>
     <script type="text/javascript" src="./script.js">
 </script>
 
